Added hyperlink weather.com

--- a/second.html
+++ b/second.html
@@ -10,5 +10,9 @@
     <li>Drink Hot Cocoa</li>
     <li>Watch Movies </li>
   </ol>
+  <h2>For Updates on the Weather</h2>
+  <ul>
+    <li> <a href=" http://www.weather.com/"> Link to Weather</a></li>
+  </ul>
 </body>
 </html>
