--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
  </head>
  <body>
    <h1>Hello World</h1>
+   <h3>Link to Second Page</h3>
+   <ul>
+     <li><a href="second.html">Page Two</a></li>
+   </ul>
  </body>
  </html>
