moved to pages folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <h1>Hello World</h1>
    <h3>Link to Second Page</h3>
    <ul>
-     <li><a href="second.html">Page Two</a></li>
+     <li><a href="pages/second.html">Page Two</a></li>
    </ul>
  </body>
  </html>
