Added link to Pages/recipe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    <h3>Link to Second Page</h3>
    <ul>
      <li><a href="pages/second.html">Page Two</a></li>
+     <li><a href="pages/recipe.html">Recipe Link</a></li>
    </ul>
  </body>
  </html>
