--- a/Pages/second.html
+++ b/Pages/second.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>My Second Web Page</title>
+  <meta charset="utf-8">
 </head>
 <body>
   <h1>How to Survive Winter Storm Jonas </h1>
