--- a/recipe2.html
+++ b/recipe2.html
@@ -1,7 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Second Recipe</title>
+  <title>My Second Recipe- Steak Tacos</title>
   <meta charset="utf-8"
 </head>
+<body>
+  <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
+<p>Prep Time: 30 Minutes</p>
+<p>Start to Finish: 45 Minutes</P>
+
+  <h2>Peach Salsa</h2>
+  <ul>
+    <li>1 fresh peach, halved, pitted</li>
+    <li>1 poblano chile</li>
+    <li>1 tablespoon fresh lime juice</li>
+    <li>2 tablespoons chopped fresh mint</li>
+    <li>Pinch sea salt</li>
+  </ul>
+
+  <h3>Steak Tacos</h3>
+  <ul>
+  <li>1 tablespoon olive oil</li>
+  <li>1 lb beef flank steak, trimmed</li>
+  <li>1/2 teaspoon sea salt</li>
+  <li>1/4 teaspoon cracked pepper</li>
+  <li>8 green onions, trimmed</li>
+  <li>8 corn tortillas (6-inch)</li>
+  <li>1/2 cup crumbled queso fresco cheese (about 2 oz)</li>
+  </ul>
+
+  <p>Heat gas or charcol grill.</p>
+
+  <h4>To make the salsa</h4>
+
+  <p> lightly brush cut side of peach halves with oil. When grill is hot, place peach halves over medium heat cut side down and cook 2 to 3 minutes or until peach halves are softened and grill marks appear. With tongs, carefully remove from grill. Let cool about 5 minutes then cut into 1/2-inch pieces.</p>
+
+  <p>Brush poblano pepper with oil and place on the grill, cook 5 to 8 minutes, turning once, until the chile is browned and tender.</p>
+
+  <p>In medium bowl, place roasted chile; cover with plastic wrap. Let stand 15 minutes. Peel chile; discard seeds and membranes. Chop chile.</p>
+
+  <p>In a medium bowl, stir together grilled peaches, poblano, mint, lime juice and salt; set aside.</p>
+
+  <p>To make the green onions and steak; arrange green onions on grill and cook 3 minutes or until slightly charred and tender.</p>
+
+  <p>Meanwhile, score flank steak with sharp knife on both sides (about 1/4-inch deep). Sprinkle steak with salt and cracked pepper. Place steak on grill over medium heat. Cover grill; cook 7 to 10 minutes or until desired doneness, turning halfway through grilling. Let stand 5 minutes. Cut steak across grain into thin slices.</p>
+
+  <p>Lightly toast tortillas and fill with steak and grilled green onions. Serve with peach salsa, queso fresco and lime wedges.</p>
+
+  <p>Makes: 8 Servings</p>
+</body>
 </html>
