--- a/recipe2.html
+++ b/recipe2.html
@@ -47,6 +47,9 @@
 
   <p>Lightly toast tortillas and fill with steak and grilled green onions. Serve with peach salsa, queso fresco and lime wedges.</p>
 
-  <p>Makes: 8 Servings</p>
+  <p>Makes: 8 Servings</p
+
+    <li> <a href="http://www.bourbonandhoney.com/flank-steak-tacos-peach-salsa/">Original Recipe</a></li>
+
 </body>
 </html>
