--- a/recipe2.html
+++ b/recipe2.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
 <p>Prep Time: 30 Minutes</p>
-<p>Start to Finish: 45 Minutes</P>
+<p>Start to Finish: 45 Minutes</p>
 
   <h2>Peach Salsa</h2>
   <ul>
@@ -47,7 +47,7 @@
 
   <p>Lightly toast tortillas and fill with steak and grilled green onions. Serve with peach salsa, queso fresco and lime wedges.</p>
 
-  <p>Makes: 8 Servings</p
+  <p>Makes: 8 Servings</p>
 
     <li> <a href="http://www.bourbonandhoney.com/flank-steak-tacos-peach-salsa/">Original Recipe</a></li>
 
