--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <ul>
      <li><a href="pages/second.html">Page Two</a></li>
      <li><a href="pages/recipe.html">Recipe Link</a></li>
-     <li><a href="recipe2.html">recipe2 Link<a/></li>
+     <li><a href="recipe2.html">recipe2 Link</a></li>
    </ul>
  </body>
  </html>
