--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <h1>Hello World</h1>
    <h3>Link to Second Page</h3>
    <ul>
-     <li><a href="pages/second.html">Page Two</a></li>
-     <li><a href="pages/recipe.html">Recipe Link</a></li>
+     <li><a href="../pages/second.html">Page Two</a></li>
+     <li><a href="../second/recipe.html">Recipe Link</a></li>
      <li><a href="recipe2.html">recipe2 Link</a></li>
    </ul>
  </body>
