--- a/Pages/recipe.html
+++ b/Pages/recipe.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Pasta Carbonara</h1>
 
-<p>This <em>creamy</em> dish of pasta in a <em>luxurious</em> sauce of bacon, egg, and cheese is a easy-to-make treat. Adding lots of <em>good, fresh <strong>black pepper</strong></em> will really add to the brightness of the dish and make the other ingredients "pop."</P>
+<p>This <em>creamy</em> dish of pasta in a <em>luxurious</em> sauce of bacon, egg, and cheese is a easy-to-make treat. Adding lots of <em>good, fresh <strong>black pepper</strong></em> will really add to the brightness of the dish and make the other ingredients "pop."</p>
 
 <h2>Ingredients:</h2>
 <ul>
