heading changed steak

--- a/recipe2.html
+++ b/recipe2.html
@@ -41,7 +41,9 @@
 
   <p>In a medium bowl, stir together grilled peaches, poblano, mint, lime juice and salt; set aside.</p>
 
-  <p>To make the green onions and steak; arrange green onions on grill and cook 3 minutes or until slightly charred and tender.</p>
+  <h4>To make the green onions and steak</h4>
+
+  <p>Arrange green onions on grill and cook 3 minutes or until slightly charred and tender.</p>
 
   <p>Meanwhile, score flank steak with sharp knife on both sides (about 1/4-inch deep). Sprinkle steak with salt and cracked pepper. Place steak on grill over medium heat. Cover grill; cook 7 to 10 minutes or until desired doneness, turning halfway through grilling. Let stand 5 minutes. Cut steak across grain into thin slices.</p>
 
