color CSS change

--- a/recipe2.html
+++ b/recipe2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Second Recipe- Steak Tacos</title>
+  <title style= "color:red">My Second Recipe- Steak Tacos</title>
   <meta charset="utf-8"
 </head>
 <body>
