--- a/recipe2.html
+++ b/recipe2.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title style= "color:red">My Second Recipe- Steak Tacos</title>
+  <title>My Second Recipe- Steak Tacos</title>
   <meta charset="utf-8"
 </head>
 <body>
-  <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
+  <h1 style= "color:red" Flank Steak Tacos with Grilled Peach Salsa</h1>
 <p>Prep Time: 30 Minutes</p>
 <p>Start to Finish: 45 Minutes</p>
 
