Changed back to original color

--- a/recipe2.html
+++ b/recipe2.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"
 </head>
 <body>
-  <h1 style= "color:red" Flank Steak Tacos with Grilled Peach Salsa</h1>
+  <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
 <p>Prep Time: 30 Minutes</p>
 <p>Start to Finish: 45 Minutes</p>
 
