closed meta tag and ul tag

--- a/recipe2.html
+++ b/recipe2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Second Recipe- Steak Tacos</title>
-  <meta charset="utf-8"
+  <meta charset="utf-8">
 </head>
 <body>
   <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
@@ -51,7 +51,8 @@
 
   <p>Makes: 8 Servings</p>
 
-    <li> <a href="http://www.bourbonandhoney.com/flank-steak-tacos-peach-salsa/">Original Recipe</a></li>
-
+    <ul>
+      <li> <a href="http://www.bourbonandhoney.com/flank-steak-tacos-peach-salsa/">Original Recipe</a></li>
+    </ul>
 </body>
 </html>
