--- a/recipe2.html
+++ b/recipe2.html
@@ -3,6 +3,7 @@
 <head>
   <title>My Second Recipe- Steak Tacos</title>
   <meta charset="utf-8">
+  <link rel="Stylesheet" href="recipe2.css">
 </head>
 <body>
   <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
