--- a/recipe2.html
+++ b/recipe2.html
@@ -3,7 +3,7 @@
 <head>
   <title>My Second Recipe- Steak Tacos</title>
   <meta charset="utf-8">
-  <link rel="Stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
