--- a/recipe2.html
+++ b/recipe2.html
@@ -34,7 +34,7 @@
 
   <h3>To make the salsa</h3>
 
-  <p> lightly brush cut side of peach halves with oil. When grill is hot, place peach halves over medium heat cut side down and cook 2 to 3 minutes or until peach halves are softened and grill marks appear. With tongs, carefully remove from grill. Let cool about 5 minutes then cut into 1/2-inch pieces.</p>
+  <p> Lightly brush cut side of peach halves with oil. When grill is hot, place peach halves over medium heat cut side down and cook 2 to 3 minutes or until peach halves are softened and grill marks appear. With tongs, carefully remove from grill. Let cool about 5 minutes then cut into 1/2-inch pieces.</p>
 
   <p>Brush poblano pepper with oil and place on the grill, cook 5 to 8 minutes, turning once, until the chile is browned and tender.</p>
 
