--- a/recipe2.html
+++ b/recipe2.html
@@ -9,7 +9,9 @@
   <h1>Flank Steak Tacos with Grilled Peach Salsa</h1>
 <p>Prep Time: 30 Minutes</p>
 <p>Start to Finish: 45 Minutes</p>
+<p>Makes: 8 Servings</p>
 
+<div id="salsa">
   <h2>Peach Salsa</h2>
   <ul>
     <li>1 fresh peach, halved, pitted</li>
@@ -18,7 +20,9 @@
     <li>2 tablespoons chopped fresh mint</li>
     <li>Pinch sea salt</li>
   </ul>
+</div>
 
+<div id="tacos">
   <h2>Steak Tacos</h2>
   <ul>
   <li>1 tablespoon olive oil</li>
@@ -29,9 +33,9 @@
   <li>8 corn tortillas (6-inch)</li>
   <li>1/2 cup crumbled queso fresco cheese (about 2 oz)</li>
   </ul>
+  </div>
 
-  <p>Heat gas or charcol grill.</p>
-
+<div id="salsa1">
   <h3>To make the salsa</h3>
 
   <p> Lightly brush cut side of peach halves with oil. When grill is hot, place peach halves over medium heat cut side down and cook 2 to 3 minutes or until peach halves are softened and grill marks appear. With tongs, carefully remove from grill. Let cool about 5 minutes then cut into 1/2-inch pieces.</p>
@@ -41,8 +45,12 @@
   <p>In medium bowl, place roasted chile; cover with plastic wrap. Let stand 15 minutes. Peel chile; discard seeds and membranes. Chop chile.</p>
 
   <p>In a medium bowl, stir together grilled peaches, poblano, mint, lime juice and salt; set aside.</p>
+</div>
 
+<div id="tacos1">
   <h3>To make the green onions and steak</h3>
+
+  <p>Heat gas or charcol grill.</p>
 
   <p>Arrange green onions on grill and cook 3 minutes or until slightly charred and tender.</p>
 
@@ -50,7 +58,7 @@
 
   <p>Lightly toast tortillas and fill with steak and grilled green onions. Serve with peach salsa, queso fresco and lime wedges.</p>
 
-  <p>Makes: 8 Servings</p>
+</div>
 
     <ul>
       <li> <a href="http://www.bourbonandhoney.com/flank-steak-tacos-peach-salsa/">Original Recipe</a></li>
