--- a/recipe2.html
+++ b/recipe2.html
@@ -59,9 +59,10 @@
   <p>Lightly toast tortillas and fill with steak and grilled green onions. Serve with peach salsa, queso fresco and lime wedges.</p>
 
 </div>
-
+<div id="link"
     <ul>
       <li> <a href="http://www.bourbonandhoney.com/flank-steak-tacos-peach-salsa/">Original Recipe</a></li>
     </ul>
+  </div>
 </body>
 </html>
