ugly webpage updates

--- a/ugly_webpage/ugly.html
+++ b/ugly_webpage/ugly.html
@@ -17,7 +17,8 @@ All mimsy were the borogoves,
 And the mome raths outgrabe.</ul>
 </h2>
 </div>
-<div id="jaws"
+
+<div id="jaws">
 <h3>'Beware the <em>Jabberwock</em>, my son!
 The jaws that bite, the claws that catch!
 Beware the Jubjub bird, and shun
@@ -25,14 +26,15 @@ The frumious <em>Bandersnatch!</em>'</h3>
 </div>
 
 <h4>He took his vorpal sword in hand:
-Long time the manxome foe he sought --
-So rested he by the Tumtum tree,
+Long time the <strong>manxome</strong> foe he sought --
+So rested he by the <strong>Tumtum</strong>tree,
 And stood a while in thought.</h4>
 
+<div id="uffish">
 <h5>And, as in uffish thought he stood,
 The <em>Jabberwock</em>, with eyes of flame,
-Came whiffling through the tulgey wood,
-And burbled as it came!</h5>
+Came <strong> whiffling</strong> through the tulgey wood,
+And burbled as it came!</h5></div>
 
 <h6>One two! One two! And through and through
 The vorpal blade went snicker-snack!
@@ -49,13 +51,17 @@ Did gyre and gimble in the wabe:
 All mimsy were the borogoves,
 And the mome raths outgrabe.</h4>
 
-<h3>The Walrus and the Carpenter
-The sun was shining on the sea,
-Shining with all his might:
-He did his very best to make
-The billows smooth and bright --
+<h3>
+  <ol>
+    <li>The Walrus and the Carpenter
+The sun was shining on the sea,</li>
+<li>Shining with all his might:
+He did his very best to make</li>
+<li>The billows smooth and bright --
 And this was odd, because it was
-The middle of the night.</h3>
+The middle of the night.</li>
+</ol>
+</h3>
 
 <h2>The moon was shining sulkily,
 Because she thought the sun
@@ -85,13 +91,16 @@ Do you suppose,' the Walrus said,
 'l doubt it,' said the Carpenter,
 And shed a bitter tear.</h5>
 
+<div id="seven">
 <h1>'O Oysters, come and walk with us!
 The Walrus did beseech.
-'A pleasant walk, a pleasant talk,
+'A pleasant walk, a <strong>pleasant</strong> talk,
 Along the briny beach:
 We cannot do with more than four,
 To give a hand to each.'</h1>
+</div>
 
+<div id="lop">
 <h3>The eldest Oyster looked at him,
 But never a word he said:
 The eldest Oyster winked his eye,
@@ -100,7 +109,7 @@ Meaning to say he did not choose
 To leave the oyster-bed.</h3>
 
 <h6>Out four young Oysters hurried up.
-All eager for the treat:
+All eager for <strong>the</strong> treat:
 Their coats were brushed, their faces washed,
 Their shoes were clean and neat --
 And this was odd, because, you know,
@@ -119,6 +128,10 @@ And then they rested on a rock
 Conveniently low:
 And all the little Oysters stood
 And waited in a row.</h6>
+</div>
+
+<img src="GitHub/proximityExercise/dorthy.jpg" alt="Dorthy" />
+
 
 <h1>'The time has come,' the Walrus said,
 'To talk of many things:
@@ -132,28 +145,32 @@ And whether pigs have wings.'</h1>
 For some of us are out of breath,
 And all of us are fat!'
 'No hurry!' said the Carpenter.
-They thanked him much for that.</h4>
+They <strong>thanked</strong> him much for that.</h4>
 
 <h3>'A loaf of bread,' the Walrus said,
 'Is what we chiefly need:
-Pepper and vinegar besides
+Pepper and <strong>vinegar</strong> besides
 Are very good indeed --
 Now, if you're ready, Oysters dear,
 We can begin to feed.'</h3>
 
+<div id="one">
 <h5>'But not on us!' the Oysters cried,
 Turning a little blue.
 'After such kindness, that would be
 A dismal thing to do!'
 'The night is fine,' the Walrus said,
 'Do you admire the view?'</h5>
+</div>
 
+<div id="nope">
 <h2>'It was so kind of you to come!
 And you are very nice!'
 The Carpenter said nothing but
 'Cut us another slice-
 I wish you were not quite so deaf-
 I've had to ask you twice!'</h2>
+<a href="http://www.w3schools.com/tags/tag_a.asp"</a>
 
 <h5>'It seems a shame,' the <em>Walrus</em>said,
 'To play them such a trick.
@@ -162,12 +179,16 @@ And made them trot so quick!'
 The Carpenter said nothing but
 'The butter's spread too thick!'</h5>
 
-<h3>'I weep for you,'the Walrus said:
-'I deeply sympathize.'
-With sobs and tears he sorted out
-Those of the largest size,
+<h3>
+  <ul>
+    <li>'I weep for you,'the Walrus said:</li>
+<li>'I deeply sympathize.'
+With sobs and tears he sorted out</li>
+<li>Those of the largest size,
 Holding his pocket-handkerchief
-Before his streaming eyes.</h3>
+Before his streaming eyes.</li></ul>
+</h3>
+</div>
 
 <h1>'O Oysters,' said the Carpenter,
 'You've had a pleasant run!
@@ -175,5 +196,6 @@ Shall we be trotting home again?'
 But answer came there none --
 And this was scarcely odd, because
 They'd eaten every one.</h1>
+<footer> Ugly Webpage</footer>
 </body>
 </html>
