--- a/final_project/index.html
+++ b/final_project/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- the viewport tag sets up browser for mobile devices-->
-  <title>COOL TITLE FOR PROJECT</title>
+  <title>COOL TITLE FOR PROJECT!</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
