--- a/final_project/index.html
+++ b/final_project/index.html
@@ -6,18 +6,70 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- the viewport tag sets up browser for mobile devices-->
-  <title>COOL TITLE FOR PROJECT!</title>
+  <title>DanIY</title>
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
   <div class="container">
+    <div class="dropdown">
+  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+    Menu
+    <span class="caret"></span>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+      <li><a href="diy.html">DIY</a></li>
+   <li><a href="crafts.html">Crafts</a></li>
+   <li><a href="baking.html">Baking</a></li>
+    <li role="separator" class="divider"></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+  </ul>
+</div>
 <header>
-  <h1>Demo</h>
+  <h1>DanIY</h>
 </header>
-    <p class="lead">this is a test of bootstrap lead class</p>
+    <p class="lead"> LEAD </p>
     <p class="lead text-primary"> layer of lead and text primary classes</p>
     <p class="text-primary"> just text primary</p>
+
+<div class="row">
+  <div class="col-md-10 col-sm-10">
+    TITLE
+</div>
+
+<div class="row">
+  <div class="col-md-3 col-sm-3">
+    <div class="dropdown">
+      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Categories
+      <ul class="dropdown-menu">
+        <li><a href="#">DIY Beauty</a></li>
+        <li><a href="#">Crafts</a></li>
+        <li><a href="#">Baking</a></li>
+      </ul>
+    </div>
+
+</div>
+<div class="col-md-3 col-sm-3">
+  <div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Categories
+      <span class="caret"></span></button>
+    <ul class="dropdown-menu" aria-labelledby"=dropdownMenu1">
+      <li><a href="diy.html">DIY</a></li>
+   <li><a href="crafts.html">Crafts</a></li>
+   <li><a href="baking.html">Baking</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="col-md-3 col-sm-3">
+Category 3
+</div>
+<div class="col-md-3 col-sm-3">
+  Category 4
+</div>
+</div>
+
 
     <div class="row">
       <div class="col-md-3 col-sm-3">
@@ -30,6 +82,7 @@
   creating columns
 </div>
     </div>
+
 
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
@@ -47,7 +100,8 @@
   </div>
 </div>
   </div>
-  <script> src="https://ajax.googleapis.com/aja/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 </body>
   </html>
