--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -92,28 +92,28 @@
 				<a href="http://daniellegodfrey.org/digital-storytelling/found-sound/">Found Sound</a>
 						</li>
 				</ul>
-		</aside>		<aside id="tag_cloud-2" class="widget widget_tag_cloud"><h4 class="widget-title"><span>Tags</span></h4><div class="tagcloud"><a href="http://danigfree.github.io/final_project/index/" class="tag-link-41 tag-link-position-1" title="1 topic" style="font-size: 8pt;">Baked</a>
-<a href="http://daniellegodfrey.org/tag/baking/" class="tag-link-27 tag-link-position-2" title="3 topics" style="font-size: 18.5pt;">Baking</a>
+		</aside>		<aside id="tag_cloud-2" class="widget widget_tag_cloud"><h4 class="widget-title"><span>Tags</span></h4><div class="tagcloud"><a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-41 tag-link-position-1" title="1 topic" style="font-size: 8pt;">Baked</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-27 tag-link-position-2" title="3 topics" style="font-size: 18.5pt;">Baking</a>
 <a href="http://daniellegodfrey.org/tag/breadcrumbs/" class="tag-link-42 tag-link-position-3" title="1 topic" style="font-size: 8pt;">Breadcrumbs</a>
 <a href="http://daniellegodfrey.org/tag/breakfast/" class="tag-link-37 tag-link-position-4" title="3 topics" style="font-size: 18.5pt;">Breakfast</a>
-<a href="http://daniellegodfrey.org/tag/brownies/" class="tag-link-26 tag-link-position-5" title="1 topic" style="font-size: 8pt;">Brownies</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-26 tag-link-position-5" title="1 topic" style="font-size: 8pt;">Brownies</a>
 <a href="http://daniellegodfrey.org/tag/buzzfeed/" class="tag-link-11 tag-link-position-6" title="1 topic" style="font-size: 8pt;">Buzzfeed</a>
-<a href="http://daniellegodfrey.org/tag/cake/" class="tag-link-85 tag-link-position-7" title="2 topics" style="font-size: 14.3pt;">cake</a>
-<a href="http://daniellegodfrey.org/tag/chocolate/" class="tag-link-28 tag-link-position-8" title="2 topics" style="font-size: 14.3pt;">Chocolate</a>
-<a href="http://daniellegodfrey.org/tag/cinnamon/" class="tag-link-96 tag-link-position-9" title="2 topics" style="font-size: 14.3pt;">cinnamon</a>
-<a href="http://daniellegodfrey.org/tag/cinnamon-rolls/" class="tag-link-35 tag-link-position-10" title="1 topic" style="font-size: 8pt;">Cinnamon Rolls</a>
-<a href="http://daniellegodfrey.org/tag/college/" class="tag-link-7 tag-link-position-11" title="1 topic" style="font-size: 8pt;">college</a>
-<a href="http://daniellegodfrey.org/tag/color/" class="tag-link-45 tag-link-position-12" title="1 topic" style="font-size: 8pt;">Color</a>
-<a href="http://daniellegodfrey.org/tag/crafrs/" class="tag-link-15 tag-link-position-13" title="1 topic" style="font-size: 8pt;">crafrs</a>
-<a href="http://daniellegodfrey.org/tag/craftgawker/" class="tag-link-12 tag-link-position-14" title="1 topic" style="font-size: 8pt;">CraftGawker</a>
-<a href="http://daniellegodfrey.org/tag/crafts/" class="tag-link-3 tag-link-position-15" title="1 topic" style="font-size: 8pt;">crafts</a>
-<a href="http://daniellegodfrey.org/tag/cream-cheese/" class="tag-link-36 tag-link-position-16" title="2 topics" style="font-size: 14.3pt;">Cream cheese</a>
-<a href="http://daniellegodfrey.org/tag/decoration/" class="tag-link-16 tag-link-position-17" title="1 topic" style="font-size: 8pt;">decoration</a>
-<a href="http://daniellegodfrey.org/tag/dessert/" class="tag-link-29 tag-link-position-18" title="3 topics" style="font-size: 18.5pt;">Dessert</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-85 tag-link-position-7" title="2 topics" style="font-size: 14.3pt;">cake</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-28 tag-link-position-8" title="2 topics" style="font-size: 14.3pt;">Chocolate</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-96 tag-link-position-9" title="2 topics" style="font-size: 14.3pt;">cinnamon</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-35 tag-link-position-10" title="1 topic" style="font-size: 8pt;">Cinnamon Rolls</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-7 tag-link-position-11" title="1 topic" style="font-size: 8pt;">college</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-45 tag-link-position-12" title="1 topic" style="font-size: 8pt;">Color</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-15 tag-link-position-13" title="1 topic" style="font-size: 8pt;">Crafts</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-12 tag-link-position-14" title="1 topic" style="font-size: 8pt;">CraftGawker</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-3 tag-link-position-15" title="1 topic" style="font-size: 8pt;">crafts</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-36 tag-link-position-16" title="2 topics" style="font-size: 14.3pt;">Cream cheese</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-16 tag-link-position-17" title="1 topic" style="font-size: 8pt;">decoration</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-29 tag-link-position-18" title="3 topics" style="font-size: 18.5pt;">Dessert</a>
 <a href="http://daniellegodfrey.org/tag/digital/" class="tag-link-100 tag-link-position-19" title="4 topics" style="font-size: 22pt;">digital</a>
 <a href="http://daniellegodfrey.org/tag/diy/" class="tag-link-10 tag-link-position-20" title="3 topics" style="font-size: 18.5pt;">DIY</a>
 <a href="http://daniellegodfrey.org/tag/easy/" class="tag-link-72 tag-link-position-21" title="2 topics" style="font-size: 14.3pt;">easy</a>
-<a href="http://daniellegodfrey.org/tag/fade/" class="tag-link-48 tag-link-position-22" title="1 topic" style="font-size: 8pt;">Fade</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-48 tag-link-position-22" title="1 topic" style="font-size: 8pt;">Fade</a>
 <a href="http://daniellegodfrey.org/tag/fall/" class="tag-link-33 tag-link-position-23" title="2 topics" style="font-size: 14.3pt;">Fall</a>
 <a href="http://daniellegodfrey.org/tag/food/" class="tag-link-4 tag-link-position-24" title="1 topic" style="font-size: 8pt;">food</a>
 <a href="http://daniellegodfrey.org/tag/foodgawker/" class="tag-link-13 tag-link-position-25" title="1 topic" style="font-size: 8pt;">FoodGawker</a>
@@ -124,13 +124,13 @@
 <a href="http://daniellegodfrey.org/tag/paint/" class="tag-link-46 tag-link-position-30" title="1 topic" style="font-size: 8pt;">Paint</a>
 <a href="http://daniellegodfrey.org/tag/pinterest/" class="tag-link-5 tag-link-position-31" title="1 topic" style="font-size: 8pt;">pinterest</a>
 <a href="http://daniellegodfrey.org/tag/pumpkin/" class="tag-link-32 tag-link-position-32" title="2 topics" style="font-size: 14.3pt;">Pumpkin</a>
-<a href="http://daniellegodfrey.org/tag/pumpkin-spice/" class="tag-link-34 tag-link-position-33" title="1 topic" style="font-size: 8pt;">Pumpkin Spice</a>
-<a href="http://daniellegodfrey.org/tag/rainbow/" class="tag-link-20 tag-link-position-34" title="1 topic" style="font-size: 8pt;">rainbow</a>
-<a href="http://daniellegodfrey.org/tag/ribbon/" class="tag-link-14 tag-link-position-35" title="1 topic" style="font-size: 8pt;">Ribbon</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-34 tag-link-position-33" title="1 topic" style="font-size: 8pt;">Pumpkin Spice</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-20 tag-link-position-34" title="1 topic" style="font-size: 8pt;">rainbow</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-14 tag-link-position-35" title="1 topic" style="font-size: 8pt;">Ribbon</a>
 <a href="http://daniellegodfrey.org/tag/savory/" class="tag-link-38 tag-link-position-36" title="1 topic" style="font-size: 8pt;">Savory</a>
 <a href="http://daniellegodfrey.org/tag/snack/" class="tag-link-80 tag-link-position-37" title="2 topics" style="font-size: 14.3pt;">Snack</a>
-<a href="http://daniellegodfrey.org/tag/sound/" class="tag-link-98 tag-link-position-38" title="2 topics" style="font-size: 14.3pt;">sound</a>
-<a href="http://daniellegodfrey.org/tag/sparkle/" class="tag-link-19 tag-link-position-39" title="1 topic" style="font-size: 8pt;">sparkle</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-98 tag-link-position-38" title="2 topics" style="font-size: 14.3pt;">sound</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-19 tag-link-position-39" title="1 topic" style="font-size: 8pt;">sparkle</a>
 <a href="http://daniellegodfrey.org/tag/squares/" class="tag-link-49 tag-link-position-40" title="1 topic" style="font-size: 8pt;">Squares</a>
 <a href="http://daniellegodfrey.org/tag/storytelling/" class="tag-link-101 tag-link-position-41" title="4 topics" style="font-size: 22pt;">storytelling</a>
 <a href="http://daniellegodfrey.org/tag/sweet/" class="tag-link-30 tag-link-position-42" title="3 topics" style="font-size: 18.5pt;">Sweet</a>
