--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -95,7 +95,7 @@
 		</aside>		<aside id="tag_cloud-2" class="widget widget_tag_cloud"><h4 class="widget-title"><span>Tags</span></h4><div class="tagcloud"><a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-41 tag-link-position-1" title="1 topic" style="font-size: 8pt;">Baked</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-27 tag-link-position-2" title="3 topics" style="font-size: 18.5pt;">Baking</a>
 <a href="http://daniellegodfrey.org/tag/breadcrumbs/" class="tag-link-42 tag-link-position-3" title="1 topic" style="font-size: 8pt;">Breadcrumbs</a>
-<a href="http://daniellegodfrey.org/tag/breakfast/" class="tag-link-37 tag-link-position-4" title="3 topics" style="font-size: 18.5pt;">Breakfast</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-37 tag-link-position-4" title="3 topics" style="font-size: 18.5pt;">Breakfast</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-26 tag-link-position-5" title="1 topic" style="font-size: 8pt;">Brownies</a>
 <a href="http://daniellegodfrey.org/tag/buzzfeed/" class="tag-link-11 tag-link-position-6" title="1 topic" style="font-size: 8pt;">Buzzfeed</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-85 tag-link-position-7" title="2 topics" style="font-size: 14.3pt;">cake</a>
@@ -110,33 +110,33 @@
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-36 tag-link-position-16" title="2 topics" style="font-size: 14.3pt;">Cream cheese</a>
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-16 tag-link-position-17" title="1 topic" style="font-size: 8pt;">decoration</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-29 tag-link-position-18" title="3 topics" style="font-size: 18.5pt;">Dessert</a>
-<a href="http://daniellegodfrey.org/tag/digital/" class="tag-link-100 tag-link-position-19" title="4 topics" style="font-size: 22pt;">digital</a>
-<a href="http://daniellegodfrey.org/tag/diy/" class="tag-link-10 tag-link-position-20" title="3 topics" style="font-size: 18.5pt;">DIY</a>
-<a href="http://daniellegodfrey.org/tag/easy/" class="tag-link-72 tag-link-position-21" title="2 topics" style="font-size: 14.3pt;">easy</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-100 tag-link-position-19" title="4 topics" style="font-size: 22pt;">digital</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-10 tag-link-position-20" title="3 topics" style="font-size: 18.5pt;">DIY</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-72 tag-link-position-21" title="2 topics" style="font-size: 14.3pt;">easy</a>
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-48 tag-link-position-22" title="1 topic" style="font-size: 8pt;">Fade</a>
-<a href="http://daniellegodfrey.org/tag/fall/" class="tag-link-33 tag-link-position-23" title="2 topics" style="font-size: 14.3pt;">Fall</a>
-<a href="http://daniellegodfrey.org/tag/food/" class="tag-link-4 tag-link-position-24" title="1 topic" style="font-size: 8pt;">food</a>
-<a href="http://daniellegodfrey.org/tag/foodgawker/" class="tag-link-13 tag-link-position-25" title="1 topic" style="font-size: 8pt;">FoodGawker</a>
-<a href="http://daniellegodfrey.org/tag/fries/" class="tag-link-39 tag-link-position-26" title="1 topic" style="font-size: 8pt;">Fries</a>
-<a href="http://daniellegodfrey.org/tag/lifestyle/" class="tag-link-8 tag-link-position-27" title="1 topic" style="font-size: 8pt;">lifestyle</a>
-<a href="http://daniellegodfrey.org/tag/metallic/" class="tag-link-18 tag-link-position-28" title="1 topic" style="font-size: 8pt;">metallic</a>
-<a href="http://daniellegodfrey.org/tag/ombre/" class="tag-link-47 tag-link-position-29" title="1 topic" style="font-size: 8pt;">Ombre</a>
-<a href="http://daniellegodfrey.org/tag/paint/" class="tag-link-46 tag-link-position-30" title="1 topic" style="font-size: 8pt;">Paint</a>
-<a href="http://daniellegodfrey.org/tag/pinterest/" class="tag-link-5 tag-link-position-31" title="1 topic" style="font-size: 8pt;">pinterest</a>
-<a href="http://daniellegodfrey.org/tag/pumpkin/" class="tag-link-32 tag-link-position-32" title="2 topics" style="font-size: 14.3pt;">Pumpkin</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-33 tag-link-position-23" title="2 topics" style="font-size: 14.3pt;">Fall</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-4 tag-link-position-24" title="1 topic" style="font-size: 8pt;">beauty</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-13 tag-link-position-25" title="1 topic" style="font-size: 8pt;">facemask</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-39 tag-link-position-26" title="1 topic" style="font-size: 8pt;">project</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-8 tag-link-position-27" title="1 topic" style="font-size: 8pt;">lifestyle</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-18 tag-link-position-28" title="1 topic" style="font-size: 8pt;">metallic</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-47 tag-link-position-29" title="1 topic" style="font-size: 8pt;">Ombre</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-46 tag-link-position-30" title="1 topic" style="font-size: 8pt;">Paint</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-5 tag-link-position-31" title="1 topic" style="font-size: 8pt;">pinterest</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-32 tag-link-position-32" title="2 topics" style="font-size: 14.3pt;">design</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-34 tag-link-position-33" title="1 topic" style="font-size: 8pt;">Pumpkin Spice</a>
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-20 tag-link-position-34" title="1 topic" style="font-size: 8pt;">rainbow</a>
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-14 tag-link-position-35" title="1 topic" style="font-size: 8pt;">Ribbon</a>
-<a href="http://daniellegodfrey.org/tag/savory/" class="tag-link-38 tag-link-position-36" title="1 topic" style="font-size: 8pt;">Savory</a>
-<a href="http://daniellegodfrey.org/tag/snack/" class="tag-link-80 tag-link-position-37" title="2 topics" style="font-size: 14.3pt;">Snack</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-38 tag-link-position-36" title="1 topic" style="font-size: 8pt;">picture</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-80 tag-link-position-37" title="2 topics" style="font-size: 14.3pt;">Snack</a>
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-98 tag-link-position-38" title="2 topics" style="font-size: 14.3pt;">sound</a>
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-19 tag-link-position-39" title="1 topic" style="font-size: 8pt;">sparkle</a>
-<a href="http://daniellegodfrey.org/tag/squares/" class="tag-link-49 tag-link-position-40" title="1 topic" style="font-size: 8pt;">Squares</a>
-<a href="http://daniellegodfrey.org/tag/storytelling/" class="tag-link-101 tag-link-position-41" title="4 topics" style="font-size: 22pt;">storytelling</a>
-<a href="http://daniellegodfrey.org/tag/sweet/" class="tag-link-30 tag-link-position-42" title="3 topics" style="font-size: 18.5pt;">Sweet</a>
-<a href="http://daniellegodfrey.org/tag/testing/" class="tag-link-6 tag-link-position-43" title="1 topic" style="font-size: 8pt;">testing</a>
-<a href="http://daniellegodfrey.org/tag/wall-decor/" class="tag-link-17 tag-link-position-44" title="1 topic" style="font-size: 8pt;">wall decor</a>
-<a href="http://daniellegodfrey.org/tag/zucchini/" class="tag-link-40 tag-link-position-45" title="2 topics" style="font-size: 14.3pt;">Zucchini</a></div>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-49 tag-link-position-40" title="1 topic" style="font-size: 8pt;">gift</a>
+<a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-101 tag-link-position-41" title="4 topics" style="font-size: 22pt;">storytelling</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-30 tag-link-position-42" title="3 topics" style="font-size: 18.5pt;">Sweet</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html/" class="tag-link-6 tag-link-position-43" title="1 topic" style="font-size: 8pt;">testing</a>
+<a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-17 tag-link-position-44" title="1 topic" style="font-size: 8pt;">wall decor</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html/" class="tag-link-40 tag-link-position-45" title="2 topics" style="font-size: 14.3pt;">Zucchini Bread</a></div>
 </aside><aside id="text-3" class="widget widget_text"><h4 class="widget-title"><span>Twitter</span></h4>			<div class="textwidget"><iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="twitter-timeline twitter-timeline-rendered" style="position: static; visibility: visible; display: inline-block; width: 520px; height: 600px; padding: 0px; border: none; max-width: 100%; min-width: 180px; margin-top: 0px; margin-bottom: 0px; min-height: 200px;" data-widget-id="657608084966232064"></iframe>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
 		</aside><aside id="categories-2" class="widget widget_categories"><h4 class="widget-title"><span>Categories</span></h4><label class="screen-reader-text" for="cat">Categories</label><select name="cat" id="cat" class="postform">
