--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -94,10 +94,10 @@
 				</ul>
 		</aside>		<aside id="tag_cloud-2" class="widget widget_tag_cloud"><h4 class="widget-title"><span>Tags</span></h4><div class="tagcloud"><a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-41 tag-link-position-1" title="1 topic" style="font-size: 8pt;">Baked</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-27 tag-link-position-2" title="3 topics" style="font-size: 18.5pt;">Baking</a>
-<a href="http://daniellegodfrey.org/tag/breadcrumbs/" class="tag-link-42 tag-link-position-3" title="1 topic" style="font-size: 8pt;">Breadcrumbs</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-42 tag-link-position-3" title="1 topic" style="font-size: 8pt;">Breadcrumbs</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-37 tag-link-position-4" title="3 topics" style="font-size: 18.5pt;">Breakfast</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-26 tag-link-position-5" title="1 topic" style="font-size: 8pt;">Brownies</a>
-<a href="http://daniellegodfrey.org/tag/buzzfeed/" class="tag-link-11 tag-link-position-6" title="1 topic" style="font-size: 8pt;">Buzzfeed</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-11 tag-link-position-6" title="1 topic" style="font-size: 8pt;">sugar</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-85 tag-link-position-7" title="2 topics" style="font-size: 14.3pt;">cake</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-28 tag-link-position-8" title="2 topics" style="font-size: 14.3pt;">Chocolate</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-96 tag-link-position-9" title="2 topics" style="font-size: 14.3pt;">cinnamon</a>
@@ -134,9 +134,9 @@
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-49 tag-link-position-40" title="1 topic" style="font-size: 8pt;">gift</a>
 <a href="http://daniellegfree.github.io/final_project/crafts.html" class="tag-link-101 tag-link-position-41" title="4 topics" style="font-size: 22pt;">storytelling</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-30 tag-link-position-42" title="3 topics" style="font-size: 18.5pt;">Sweet</a>
-<a href="http://daniellegfree.github.io/final_project/baking.html/" class="tag-link-6 tag-link-position-43" title="1 topic" style="font-size: 8pt;">testing</a>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-6 tag-link-position-43" title="1 topic" style="font-size: 8pt;">testing</a>
 <a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-17 tag-link-position-44" title="1 topic" style="font-size: 8pt;">wall decor</a>
-<a href="http://daniellegfree.github.io/final_project/baking.html/" class="tag-link-40 tag-link-position-45" title="2 topics" style="font-size: 14.3pt;">Zucchini Bread</a></div>
+<a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-40 tag-link-position-45" title="2 topics" style="font-size: 14.3pt;">Zucchini Bread</a></div>
 </aside><aside id="text-3" class="widget widget_text"><h4 class="widget-title"><span>Twitter</span></h4>			<div class="textwidget"><iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="twitter-timeline twitter-timeline-rendered" style="position: static; visibility: visible; display: inline-block; width: 520px; height: 600px; padding: 0px; border: none; max-width: 100%; min-width: 180px; margin-top: 0px; margin-bottom: 0px; min-height: 200px;" data-widget-id="657608084966232064"></iframe>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
 		</aside><aside id="categories-2" class="widget widget_categories"><h4 class="widget-title"><span>Categories</span></h4><label class="screen-reader-text" for="cat">Categories</label><select name="cat" id="cat" class="postform">
