added twitter widget

--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -77,20 +77,15 @@
 	<div id="secondary">
 				<aside id="recent-posts-2" class="widget widget_recent_entries">		<h4 class="widget-title"><span>Recent Posts</span></h4>		<ul>
 					<li>
-				<a href="http://daniellegodfrey.org/semi-homemade/food-documentary/">Food Documentary</a>
+				<a href="http://daniellegfree.github.io/final_project/baking.html">Aesthetic Engagement In Food Videos</a>
 						</li>
 					<li>
-				<a href="http://daniellegodfrey.org/linguistics/linguistics-presentation/">Linguistics Presentation</a>
+				<a href="http://daniellegfree.github.io/final_project/crafts.html">Ribbon Banner</a>
 						</li>
 					<li>
-				<a href="http://daniellegodfrey.org/baking/aesthetic-engagement-in-food-videos/">Aesthetic Engagement In Food Videos</a>
+				<a href="http://daniellegfree.github.io/final_project/diy.html">Face Mask</a>
 						</li>
-					<li>
-				<a href="http://daniellegodfrey.org/digital-storytelling/sensory-ethnography-project/">Sensory Ethnography Project</a>
-						</li>
-					<li>
-				<a href="http://daniellegodfrey.org/digital-storytelling/found-sound/">Found Sound</a>
-						</li>
+
 				</ul>
 		</aside>		<aside id="tag_cloud-2" class="widget widget_tag_cloud"><h4 class="widget-title"><span>Tags</span></h4><div class="tagcloud"><a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-41 tag-link-position-1" title="1 topic" style="font-size: 8pt;">Baked</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-27 tag-link-position-2" title="3 topics" style="font-size: 18.5pt;">Baking</a>
@@ -137,49 +132,12 @@
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-6 tag-link-position-43" title="1 topic" style="font-size: 8pt;">testing</a>
 <a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-17 tag-link-position-44" title="1 topic" style="font-size: 8pt;">wall decor</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-40 tag-link-position-45" title="2 topics" style="font-size: 14.3pt;">Zucchini Bread</a></div>
-</aside><aside id="text-3" class="widget widget_text"><h4 class="widget-title"><span>Twitter</span></h4>			<div class="textwidget"><iframe id="twitter-widget-0" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true" class="twitter-timeline twitter-timeline-rendered" style="position: static; visibility: visible; display: inline-block; width: 520px; height: 600px; padding: 0px; border: none; max-width: 100%; min-width: 180px; margin-top: 0px; margin-bottom: 0px; min-height: 200px;" data-widget-id="657608084966232064"></iframe>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>
-		</aside><aside id="categories-2" class="widget widget_categories"><h4 class="widget-title"><span>Categories</span></h4><label class="screen-reader-text" for="cat">Categories</label><select name="cat" id="cat" class="postform">
-	<option value="-1">Select Category</option>
-	<option class="level-0" value="25">Baking</option>
-	<option class="level-0" value="54">Cooking</option>
-	<option class="level-0" value="22">Crafts</option>
-	<option class="level-0" value="97">Digital Storytelling</option>
-	<option class="level-0" value="115">Linguistics</option>
-	<option class="level-0" value="9">Proposal</option>
-	<option class="level-0" value="31">Semi-Homemade</option>
-	<option class="level-0" value="1">Uncategorized</option>
-</select>
 
-<script type="text/javascript">
-/* <![CDATA[ */
-(function() {
-	var dropdown = document.getElementById( "cat" );
-	function onCatChange() {
-		if ( dropdown.options[ dropdown.selectedIndex ].value > 0 ) {
-			location.href = "http://daniellegodfrey.org/?cat=" + dropdown.options[ dropdown.selectedIndex ].value;
-		}
-	}
-	dropdown.onchange = onCatChange;
-})();
-/* ]]> */
-</script>
+</script> </div>
+<a class="twitter-timeline" href="https://twitter.com/Danigfree" data-widget-id="727571648262643712">Tweets by @Danigfree</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-</aside><aside id="search-2" class="widget widget_search"><h4 class="widget-title"><span>Search</span></h4><div class="search-icon">
-    <i class="fa fa-search"></i>
-    <div class="ak-search">
-        <div class="close">×</div>
-     <form action="http://daniellegodfrey.org/" class="search-form" method="get">
-        <label>
-            <span class="screen-reader-text">Search for:</span>
-            <input type="search" title="Search for:" name="s" value="" placeholder="Search Content..." class="search-field">
-        </label>
-        <input type="submit" value="Search" class="search-submit">
-     </form>
-     <div class="overlay-search"> </div>
-    </div><!-- .ak-search -->
-</div><!-- .search-icon -->
-</aside>	</div>
+
 </div>
 
 
