--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -86,6 +86,7 @@
 				<a href="http://daniellegfree.github.io/final_project/diy.html">Face Mask</a>
 						</li>
 
+<!-- Word TAGS -->
 				</ul>
 		</aside>		<aside id="tag_cloud-2" class="widget widget_tag_cloud"><h4 class="widget-title"><span>Tags</span></h4><div class="tagcloud"><a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-41 tag-link-position-1" title="1 topic" style="font-size: 8pt;">Baked</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-27 tag-link-position-2" title="3 topics" style="font-size: 18.5pt;">Baking</a>
@@ -132,15 +133,17 @@
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-6 tag-link-position-43" title="1 topic" style="font-size: 8pt;">testing</a>
 <a href="http://daniellegfree.github.io/final_project/diy.html" class="tag-link-17 tag-link-position-44" title="1 topic" style="font-size: 8pt;">wall decor</a>
 <a href="http://daniellegfree.github.io/final_project/baking.html" class="tag-link-40 tag-link-position-45" title="2 topics" style="font-size: 14.3pt;">Zucchini Bread</a></div>
-
 </script> </div>
+<!-- Word TAGS -->
+
+
+<!-- TWITTER FEED -->
 <a class="twitter-timeline" href="https://twitter.com/Danigfree" data-widget-id="727571648262643712">Tweets by @Danigfree</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<!-- TWITTER FEED -->
 
 
 </div>
-
-
 
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
