--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -141,10 +141,16 @@
 <a class="twitter-timeline" href="https://twitter.com/Danigfree" data-widget-id="727571648262643712">Tweets by @Danigfree</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <!-- TWITTER FEED -->
-
-
 </div>
 
+<!-- IMAGES -->
+<img src="images/monkey.png" class="floatright" alt="Monkey Bread">
+<img src="images/ribbon.jpg" class="floatright" alt="Ribbon Wall">
+<img src="images/cake.jpg" class="floatright" alt="Cake">
+<img src="images/note.jpg" class="floatright" alt="Notebook">
+
+
+<!-- IMAGES -->
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
