--- a/final_project/crafts.html
+++ b/final_project/crafts.html
@@ -73,6 +73,25 @@
   <h1>DanIY</h>
 </header>
 
+<div class="col-md-8 col-sm-8">
+  <!-- IMAGES -->
+  <div class="row">
+    <div class="col-md-6 col-sm-6">
+      FEATURED ARTICLE
+    </div>
+  </div>
+  <div class="col-md-3 col-sm-3">
+  <img src="images/monkey.png" class="floatright" alt="Monkey Bread">
+<div class="row">
+  <div class="col-md-3 col-sm-3"
+  <img src="images/ribbon.jpg" class="floatright" alt="Ribbon Wall">
+</div>
+</div>
+  <img src="images/cake.jpg" class="floatright" alt="Cake">
+  <img src="images/note.jpg" class="floatright" alt="Notebook">
+</div>
+
+<div class="col-md-4 col-sm-4"
 <div id="secondary-right-sidebar" class="widget-area" role="complementary">
 	<div id="secondary">
 				<aside id="recent-posts-2" class="widget widget_recent_entries">		<h4 class="widget-title"><span>Recent Posts</span></h4>		<ul>
@@ -142,12 +161,8 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <!-- TWITTER FEED -->
 </div>
+</div>
 
-<!-- IMAGES -->
-<img src="images/monkey.png" class="floatright" alt="Monkey Bread">
-<img src="images/ribbon.jpg" class="floatright" alt="Ribbon Wall">
-<img src="images/cake.jpg" class="floatright" alt="Cake">
-<img src="images/note.jpg" class="floatright" alt="Notebook">
 
 
 <!-- IMAGES -->
