--- a/final_project/index.html
+++ b/final_project/index.html
@@ -40,25 +40,12 @@
 
 <div class="row">
   <div class="col-md-3 col-sm-3">
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Categories
-      <ul class="dropdown-menu">
-        <li><a href="#">DIY Beauty</a></li>
-        <li><a href="#">Crafts</a></li>
-        <li><a href="#">Baking</a></li>
-      </ul>
+  one
     </div>
 
 </div>
 <div class="col-md-3 col-sm-3">
-  <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Categories
-      <span class="caret"></span></button>
-    <ul class="dropdown-menu" aria-labelledby"=dropdownMenu1">
-      <li><a href="diy.html">DIY</a></li>
-   <li><a href="crafts.html">Crafts</a></li>
-   <li><a href="baking.html">Baking</a></li>
-    </ul>
+  2
   </div>
 </div>
 
